# evomatic

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
evomatic/: __init__.py  annealing.py  competition.py  evolve.py  fitness.py  genetic.py  io.py  mutate.py  mutation.py  plots.py  recombination.py  tournaments.py
examples/: README.md
examples/max_density_min_mass/: max_density_min_mass.py  max_density_min_mass.yaml
examples/max_f_valence_max_melting_temperature/: max_f_valence_max_melting_temperature.py
examples/max_mass/: max_mass.py  max_mass.yaml
examples/min_mixing_enthalpy_max_mixing_entropy/: min_mixing_enthalpy_max_mixing_entropy.py
tests/: test_fitness.py  test_mass_maximisation.py
