[metadata]
name = evomatic
author = Robert Forrest
author_email = robertforrest@live.com 
description = Evolutionary algorithm for development of alloy materials 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Robert-Forrest/evomatic
license = BSD 3-Clause License
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = evomatic
python_requires = >=3.6
install_requires =
    pandas
    numpy
    matplotlib
    metallurgy >= 0.0.12
    elementy
    cerebral
    omegaconf

[options.entry_points]
console_scripts = 
    # exename = package.module:funcname

[options.extras_require]
dev =
    pre-commit
    tox ==3.24.3
    pytest ==6.2.5
    pytest-cov ==2.12.1

[options.package_data]
evomatic = py.typed
